--- a/src/main/resources/com/example/crime_management_system_gui/forget_password.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/forget_password.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="forgetPassword" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.ForgotPassword">
+<AnchorPane id="forgetPassword" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.ForgotPassword">
     <Button layoutX="120.0" layoutY="718.0" mnemonicParsing="false" onAction="#switchToLogin" opacity="0.0" prefHeight="98.0" prefWidth="350.0" text="Button">
       <cursor>
          <Cursor fx:constant="HAND" />
@@ -17,26 +17,29 @@
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor></Button>
-    <Label fx:id="message" layoutX="546.0" layoutY="631.0" prefHeight="86.0" prefWidth="446.0" text="Label" />
-    <TextField fx:id="id" layoutX="632.0" layoutY="205.0" prefHeight="98.0" prefWidth="367.0" promptText="ID">
+    <Label fx:id="message" alignment="CENTER" layoutX="546.0" layoutY="638.0" prefHeight="86.0" prefWidth="446.0">
+      <font>
+         <Font size="24.0" />
+      </font></Label>
+    <TextField fx:id="id" layoutX="632.0" layoutY="213.0" prefHeight="74.0" prefWidth="367.0">
         <font>
-          <Font size="18.0" />
+          <Font size="24.0" />
         </font>
       <cursor>
          <Cursor fx:constant="TEXT" />
       </cursor>
     </TextField>
-    <PasswordField fx:id="newPassword" layoutX="632.0" layoutY="335.0" prefHeight="98.0" prefWidth="367.0" promptText="New Password">
+    <PasswordField fx:id="newPassword" layoutX="632.0" layoutY="344.0" prefHeight="74.0" prefWidth="367.0">
         <font>
-          <Font size="18.0" />
+          <Font size="24.0" />
         </font>
       <cursor>
          <Cursor fx:constant="TEXT" />
       </cursor>
     </PasswordField>
-    <PasswordField fx:id="newPasswordConfirm" layoutX="633.0" layoutY="464.0" prefHeight="98.0" prefWidth="367.0" promptText="Confirm Password">
+    <PasswordField fx:id="newPasswordConfirm" layoutX="633.0" layoutY="465.0" prefHeight="74.0" prefWidth="367.0">
         <font>
-          <Font size="18.0" />
+          <Font size="24.0" />
         </font>
       <cursor>
          <Cursor fx:constant="TEXT" />
