--- a/src/main/resources/com/example/crime_management_system_gui/create_department.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/create_department.fxml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Departments">
-    <TextField fx:id="name" layoutX="381.0" layoutY="296.0" promptText="Name" />
-    <TextField fx:id="id" layoutX="381.0" layoutY="254.0" promptText="ID" />
-    <DatePicker fx:id="datePicker" layoutX="377.0" layoutY="356.0" promptText="Date of activation" />
-    <Label fx:id="message" layoutX="450.0" layoutY="447.0" text="Label" />
-    <Button layoutX="438.0" layoutY="521.0" mnemonicParsing="false" onAction="#createDepartment" text="create" />
-   <Button layoutX="430.0" layoutY="567.0" mnemonicParsing="false" onAction="#backToPoliceChief" text="back" />
+<AnchorPane id="createDepartment" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Departments">
+    <TextField fx:id="name" layoutX="580.0" layoutY="263.0" prefHeight="62.0" prefWidth="375.0">
+      <font>
+         <Font size="24.0" />
+      </font></TextField>
+    <TextField fx:id="id" layoutX="580.0" layoutY="391.0" prefHeight="62.0" prefWidth="375.0">
+      <font>
+         <Font size="24.0" />
+      </font></TextField>
+    <DatePicker fx:id="datePicker" layoutX="580.0" layoutY="508.0" prefHeight="62.0" prefWidth="375.0" />
+    <Label fx:id="message" alignment="CENTER" layoutX="541.0" layoutY="185.0" prefHeight="62.0" prefWidth="453.0">
+      <font>
+         <Font size="24.0" />
+      </font></Label>
+    <Button layoutX="657.0" layoutY="620.0" mnemonicParsing="false" onAction="#createDepartment" opacity="0.0" prefHeight="62.0" prefWidth="226.0" text="create">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></Button>
+   <Button layoutX="45.0" layoutY="14.0" mnemonicParsing="false" onAction="#backToPoliceChief" opacity="0.0" prefHeight="39.0" prefWidth="55.0" text="back">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></Button>
 </AnchorPane>
