--- a/src/main/resources/com/example/crime_management_system_gui/style.css
+++ b/src/main/resources/com/example/crime_management_system_gui/style.css
@@ -47,6 +47,13 @@
    -fx-background-size: cover;
 }
 
+#assignOfficer{
+   -fx-background-image: url("photos/assign_officer.png");
+   -fx-background-repeat: no-repeat;
+   -fx-background-position: center center;
+   -fx-background-size: cover;
+}
+
 #createDepartment{
    -fx-background-image: url("photos/create_department.png");
    -fx-background-repeat: no-repeat;
