--- a/src/main/resources/com/example/crime_management_system_gui/view_department.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/view_department.fxml
@@ -17,20 +17,26 @@
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor></Button>
-   <Label fx:id="viewName" alignment="CENTER" layoutX="622.0" layoutY="388.0" prefHeight="63.0" prefWidth="366.0">
+   <Label fx:id="viewName" alignment="CENTER" layoutX="321.0" layoutY="401.0" prefHeight="63.0" prefWidth="383.0">
       <font>
          <Font size="24.0" />
       </font></Label>
-   <TextField fx:id="id" alignment="CENTER" layoutX="620.0" layoutY="188.0" prefHeight="63.0" prefWidth="366.0">
+   <TextField fx:id="id" alignment="CENTER" layoutX="570.0" layoutY="188.0" prefHeight="63.0" prefWidth="415.0">
       <cursor>
          <Cursor fx:constant="TEXT" />
       </cursor>
       <font>
          <Font size="24.0" />
       </font></TextField>
-   <Label fx:id="message" alignment="CENTER" layoutX="622.0" layoutY="324.0" prefHeight="63.0" prefWidth="366.0">
+   <Label fx:id="message" alignment="CENTER" layoutX="597.0" layoutY="324.0" prefHeight="63.0" prefWidth="415.0">
       <font>
          <Font size="24.0" />
       </font></Label>
-   <ListView fx:id="userListView" layoutX="320.0" layoutY="472.0" prefHeight="234.0" prefWidth="390.0" />
+   <ListView fx:id="usersListView" layoutX="321.0" layoutY="484.0" prefHeight="234.0" prefWidth="383.0" />
+   <Label fx:id="dateOfActivation" alignment="CENTER" layoutX="1076.0" layoutY="401.0" prefHeight="63.0" prefWidth="383.0">
+      <font>
+         <Font size="24.0" />
+      </font>
+   </Label>
+   <ListView fx:id="casesListView" layoutX="1078.0" layoutY="484.0" prefHeight="234.0" prefWidth="383.0" />
 </AnchorPane>
