--- a/src/main/resources/com/example/crime_management_system_gui/assign_officer.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/assign_officer.fxml
@@ -2,15 +2,41 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="assignOfficer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.PoliceChief">
-   <children>
-      <Button layoutX="46.0" layoutY="14.0" mnemonicParsing="false" onAction="#backToPoliceChief" opacity="0.0" prefHeight="39.0" prefWidth="53.0" text="Button">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-   </children>
+<AnchorPane id="assignOfficer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <Button layoutX="46.0" layoutY="14.0" mnemonicParsing="false"  opacity="0.0" prefHeight="39.0" prefWidth="53.0" text="Button">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor>
+   </Button>
+   <ComboBox fx:id="assignedDepartment" layoutX="592.0" layoutY="216.0" prefHeight="65.0" prefWidth="398.0">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></ComboBox>
+   <ComboBox fx:id="assignedOfficers" layoutX="592.0" layoutY="454.0" prefHeight="65.0" prefWidth="398.0">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></ComboBox>
+   <ComboBox fx:id="assignedCases" layoutX="592.0" layoutY="336.0" prefHeight="65.0" prefWidth="398.0">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></ComboBox>
+   <Button layoutX="693.0" layoutY="572.0" mnemonicParsing="false"  opacity="0.0" prefHeight="66.0" prefWidth="226.0" text="Button">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></Button>
+   <Label fx:id="message" alignment="CENTER" layoutX="607.0" layoutY="646.0" prefHeight="66.0" prefWidth="398.0">
+      <font>
+         <Font size="24.0" />
+      </font>
+   </Label>
+   <Button layoutX="703.0" layoutY="582.0" mnemonicParsing="false" opacity="0.0" prefHeight="66.0" prefWidth="226.0" text="Button">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor>
+   </Button>
 </AnchorPane>
