--- a/src/main/resources/com/example/crime_management_system_gui/view_department.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/view_department.fxml
@@ -17,11 +17,11 @@
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor></Button>
-   <Label fx:id="viewName" alignment="CENTER" layoutX="321.0" layoutY="401.0" prefHeight="63.0" prefWidth="383.0">
+   <Label fx:id="viewId" alignment="CENTER" layoutX="321.0" layoutY="401.0" prefHeight="63.0" prefWidth="383.0">
       <font>
          <Font size="24.0" />
       </font></Label>
-   <TextField fx:id="id" alignment="CENTER" layoutX="570.0" layoutY="188.0" prefHeight="63.0" prefWidth="415.0">
+   <TextField fx:id="name" alignment="CENTER" layoutX="570.0" layoutY="188.0" prefHeight="63.0" prefWidth="415.0">
       <cursor>
          <Cursor fx:constant="TEXT" />
       </cursor>
@@ -32,7 +32,7 @@
       <font>
          <Font size="24.0" />
       </font></Label>
-   <ListView fx:id="usersListView" layoutX="321.0" layoutY="484.0" prefHeight="234.0" prefWidth="383.0" />
+   <ListView fx:id="usersListView" editable="true" layoutX="321.0" layoutY="484.0" prefHeight="234.0" prefWidth="383.0" />
    <Label fx:id="dateOfActivation" alignment="CENTER" layoutX="1076.0" layoutY="401.0" prefHeight="63.0" prefWidth="383.0">
       <font>
          <Font size="24.0" />
