--- a/src/main/resources/com/example/crime_management_system_gui/view_criminal.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/view_criminal.fxml
@@ -14,7 +14,7 @@
          <Cursor fx:constant="HAND" />
       </cursor>
    </Button>
-   <Button layoutX="641.0" layoutY="664.0" mnemonicParsing="false" onAction="#viewCriminal" opacity="0.0" prefHeight="60.0" prefWidth="230.0" text="Button">
+   <Button layoutX="641.0" layoutY="664.0" mnemonicParsing="false" onAction="#switchTOViewCriminal" opacity="0.0" prefHeight="60.0" prefWidth="230.0" text="Button">
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor>
