--- a/src/main/resources/com/example/crime_management_system_gui/view_department.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/view_department.fxml
@@ -13,7 +13,7 @@
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor></Button>
-   <Button layoutX="681.0" layoutY="265.0" mnemonicParsing="false" onAction="#viewDepartment" opacity="0.0" prefHeight="74.0" prefWidth="222.0" text="view">
+   <Button layoutX="681.0" layoutY="265.0" mnemonicParsing="false" onAction="#switchTOViewDepartment" opacity="0.0" prefHeight="74.0" prefWidth="222.0" text="view">
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor></Button>
