--- a/src/main/resources/com/example/crime_management_system_gui/view_officer.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/view_officer.fxml
@@ -38,7 +38,7 @@
          <Font size="24.0" />
       </font>
    </Label>
-   <ComboBox fx:id="ranking" focusTraversable="false" layoutX="311.0" layoutY="621.0" prefHeight="64.0" prefWidth="364.0" promptText="None">
+   <ComboBox fx:id="ranking" focusTraversable="false" layoutX="311.0" layoutY="621.0" prefHeight="64.0" prefWidth="364.0" promptText="New Rank (optional)">
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor>
@@ -48,7 +48,7 @@
          <Cursor fx:constant="HAND" />
       </cursor>
    </Button>
-   <Label fx:id="message" alignment="CENTER" layoutX="740.0" layoutY="621.0" prefHeight="64.0" prefWidth="371.0">
+   <Label fx:id="message" alignment="CENTER" layoutX="678.0" layoutY="621.0" prefHeight="64.0" prefWidth="472.0">
       <font>
          <Font size="24.0" />
       </font>
