--- a/src/main/resources/com/example/crime_management_system_gui/assign_officer.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/assign_officer.fxml
@@ -14,7 +14,7 @@
          <Cursor fx:constant="HAND" />
       </cursor>
    </Button>
-   <ComboBox fx:id="assignedCases" layoutX="584.0" layoutY="348.0" prefHeight="58.0" prefWidth="406.0">
+   <ComboBox fx:id="assignedCases" layoutX="584.0" layoutY="348.0" prefHeight="58.0" prefWidth="406.0" promptText="Cases ID">
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor></ComboBox>
@@ -32,10 +32,22 @@
          <Cursor fx:constant="HAND" />
       </cursor>
    </Button>
-   <TextField fx:id="nameOfDepartment" layoutX="581.0" layoutY="224.0" prefHeight="58.0" prefWidth="406.0" />
+   <TextField fx:id="nameOfDepartment" alignment="CENTER" layoutX="581.0" layoutY="224.0" prefHeight="58.0" prefWidth="406.0" promptText="Department ID">
+      <font>
+         <Font size="24.0" />
+      </font>
+      <cursor>
+         <Cursor fx:constant="TEXT" />
+      </cursor></TextField>
    <Button layoutX="633.0" layoutY="591.0" mnemonicParsing="false" onAction="#assignOfficers" opacity="0.0" prefHeight="66.0" prefWidth="258.0" text="assign officer">
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor></Button>
-   <TextField fx:id="officersOfDepartment" layoutX="584.0" layoutY="471.0" prefHeight="58.0" prefWidth="406.0" />
+   <TextField fx:id="officersOfDepartment" alignment="CENTER" layoutX="584.0" layoutY="471.0" prefHeight="58.0" prefWidth="406.0" promptText="Officer ID">
+      <font>
+         <Font size="24.0" />
+      </font>
+      <cursor>
+         <Cursor fx:constant="TEXT" />
+      </cursor></TextField>
 </AnchorPane>
