--- a/src/main/resources/com/example/crime_management_system_gui/login.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/login.fxml
@@ -14,23 +14,23 @@
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <TextField id="border" fx:id="id" alignment="CENTER" focusTraversable="false" layoutX="589.0" layoutY="304.0" prefHeight="62.0" prefWidth="322.0">
+    <TextField id="border" fx:id="id" alignment="CENTER" focusTraversable="false" layoutX="589.0" layoutY="304.0" prefHeight="62.0" prefWidth="322.0" promptText="ID">
         <cursor>
             <Cursor fx:constant="TEXT" />
         </cursor>
       <font>
-         <Font size="18.0" />
+         <Font size="24.0" />
       </font>
     </TextField>
-    <PasswordField fx:id="password" alignment="CENTER" layoutX="591.0" layoutY="408.0" onAction="#handleLogin" prefHeight="62.0" prefWidth="322.0">
+    <PasswordField fx:id="password" alignment="CENTER" layoutX="590.0" layoutY="408.0" onAction="#handleLogin" prefHeight="62.0" prefWidth="322.0" promptText="Password">
         <cursor>
             <Cursor fx:constant="TEXT" />
         </cursor>
       <font>
-         <Font size="18.0" />
+         <Font size="24.0" />
       </font>
     </PasswordField>
-    <Button layoutX="626.0" layoutY="534.0" mnemonicParsing="false" onAction="#handleLogin" opacity="0.0" prefHeight="72.0" prefWidth="296.0" text="Button">
+    <Button layoutX="625.0" layoutY="534.0" mnemonicParsing="false" onAction="#handleLogin" opacity="0.0" prefHeight="72.0" prefWidth="296.0" text="Button">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
