--- a/src/main/resources/com/example/crime_management_system_gui/report.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/report.fxml
@@ -21,7 +21,7 @@
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <TextField fx:id="username" focusTraversable="false" layoutX="595.0" layoutY="175.0" prefHeight="62.0" prefWidth="358.0">
+    <TextField fx:id="username" alignment="CENTER" focusTraversable="false" layoutX="595.0" layoutY="175.0" prefHeight="62.0" prefWidth="358.0" promptText="Name">
         <font>
             <Font size="24.0" />
         </font>
@@ -29,7 +29,7 @@
             <Cursor fx:constant="TEXT" />
         </cursor>
     </TextField>
-    <TextField fx:id="witness" focusTraversable="false" layoutX="595.0" layoutY="254.0" prefHeight="62.0" prefWidth="358.0" promptText="(optional)">
+    <TextField fx:id="witness" alignment="CENTER" focusTraversable="false" layoutX="595.0" layoutY="254.0" prefHeight="62.0" prefWidth="358.0" promptText="Witness (optional)">
         <font>
             <Font size="24.0" />
         </font>
@@ -37,14 +37,14 @@
             <Cursor fx:constant="TEXT" />
         </cursor>
     </TextField>
-    <DatePicker fx:id="datePicker" focusTraversable="false" layoutX="595.0" layoutY="336.0" prefHeight="62.0" prefWidth="358.0" showWeekNumbers="true">
+    <DatePicker fx:id="datePicker" focusTraversable="false" layoutX="595.0" layoutY="336.0" prefHeight="62.0" prefWidth="358.0" promptText="Date of reporting" showWeekNumbers="true">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
     </DatePicker>
     <TextArea fx:id="description" focusTraversable="false" layoutX="339.0" layoutY="505.0" prefHeight="222.0" prefWidth="908.0" promptText="Put your report here, please">
         <font>
-            <Font size="18.0" />
+            <Font size="24.0" />
         </font>
         <cursor>
             <Cursor fx:constant="TEXT" />
@@ -55,7 +55,7 @@
             <Font size="18.0" />
         </font>
     </Label>
-   <ComboBox fx:id="crimeType" focusTraversable="false" layoutX="595.0" layoutY="420.0" prefHeight="62.0" prefWidth="358.0" promptText="None" visibleRowCount="100">
+   <ComboBox fx:id="crimeType" focusTraversable="false" layoutX="595.0" layoutY="420.0" prefHeight="62.0" prefWidth="358.0" promptText="Type of report" visibleRowCount="100">
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor></ComboBox>
