--- a/src/main/resources/com/example/crime_management_system_gui/forget_password.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/forget_password.fxml
@@ -21,7 +21,7 @@
       <font>
          <Font size="24.0" />
       </font></Label>
-    <TextField fx:id="id" layoutX="632.0" layoutY="213.0" prefHeight="74.0" prefWidth="367.0">
+    <TextField fx:id="id" alignment="CENTER" layoutX="632.0" layoutY="224.0" prefHeight="58.0" prefWidth="406.0" promptText="ID">
         <font>
           <Font size="24.0" />
         </font>
@@ -29,7 +29,7 @@
          <Cursor fx:constant="TEXT" />
       </cursor>
     </TextField>
-    <PasswordField fx:id="newPassword" layoutX="632.0" layoutY="344.0" prefHeight="74.0" prefWidth="367.0">
+    <PasswordField fx:id="newPassword" alignment="CENTER" layoutX="632.0" layoutY="353.0" prefHeight="58.0" prefWidth="406.0" promptText="New Password">
         <font>
           <Font size="24.0" />
         </font>
@@ -37,7 +37,7 @@
          <Cursor fx:constant="TEXT" />
       </cursor>
     </PasswordField>
-    <PasswordField fx:id="newPasswordConfirm" layoutX="633.0" layoutY="465.0" prefHeight="74.0" prefWidth="367.0">
+    <PasswordField fx:id="newPasswordConfirm" alignment="CENTER" layoutX="633.0" layoutY="474.0" prefHeight="58.0" prefWidth="406.0" promptText="Confirm Password">
         <font>
           <Font size="24.0" />
         </font>
