--- a/src/main/resources/com/example/crime_management_system_gui/police_officer.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/police_officer.fxml
@@ -2,9 +2,11 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
-
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0"
-            prefWidth="1540.0" xmlns="http://javafx.com/javafx/23.0.1">
-    <Button layoutX="18.0" layoutY="14.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="90.0" text="logout"/>
+            prefWidth="1540.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.crime_management_system_gui.PoliceOfficers">
+    <Button layoutX="18.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToMain" prefHeight="46.0"
+            prefWidth="90.0" text="logout"/>
+    <Button layoutX="1436.0" layoutY="25.0" mnemonicParsing="false" onAction="#switchTOViewProfileForOfficer" prefHeight="57.0"
+            prefWidth="77.0" text="profile"/>
 </AnchorPane>
