--- a/src/main/resources/com/example/crime_management_system_gui/style.css
+++ b/src/main/resources/com/example/crime_management_system_gui/style.css
@@ -90,7 +90,7 @@
 }
 
 #policeOfficer{
-   -fx-background-image: url("photos/officer.png");
+   -fx-background-image: url("photos/police_officer.png");
    -fx-background-repeat: no-repeat;
    -fx-background-position: center center;
    -fx-background-size: cover;
