--- a/src/main/resources/com/example/crime_management_system_gui/police_chief.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/police_chief.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="policeChief" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.PoliceChief">
+<AnchorPane id="policeChief" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Switching">
     <Button layoutX="334.0" layoutY="589.0" mnemonicParsing="false" onAction="#switchTOCreateDepartment" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="create department">
         <cursor>
             <Cursor fx:constant="HAND" />
@@ -30,5 +30,4 @@
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-   <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchTOViewProfileForChief" prefHeight="42.0" prefWidth="94.0" text="profile" />
 </AnchorPane>
