--- a/src/main/resources/com/example/crime_management_system_gui/police_officer.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/police_officer.fxml
@@ -1,12 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0"
-            prefWidth="1540.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.crime_management_system_gui.PoliceOfficers">
-    <Button layoutX="18.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToMain" prefHeight="46.0"
-            prefWidth="90.0" text="logout"/>
-    <Button layoutX="1436.0" layoutY="25.0" mnemonicParsing="false" onAction="#switchTOViewProfileForOfficer" prefHeight="57.0"
-            prefWidth="77.0" text="profile"/>
+
+<AnchorPane id="policeOfficer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Switching">
+    <Button layoutX="43.0" layoutY="16.0" mnemonicParsing="false" onAction="#switchTOViewProfile" opacity="0.0" prefHeight="39.0" prefWidth="46.0" text="logout">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></Button>
+    <Button layoutX="1409.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="39.0" prefWidth="90.0" text="profile">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></Button>
+   <Button layoutX="340.0" layoutY="354.0" mnemonicParsing="false" onAction="#switchTOAddCriminal" opacity="0.0" prefHeight="70.0" prefWidth="258.0" text="Button">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor>
+   </Button>
+   <Button layoutX="339.0" layoutY="608.0" mnemonicParsing="false" opacity="0.0" prefHeight="64.0" prefWidth="258.0" text="Button">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor>
+   </Button>
+   <Button layoutX="939.0" layoutY="354.0" mnemonicParsing="false" onAction="#switchTOViewCriminal" opacity="0.0" prefHeight="70.0" prefWidth="266.0" text="Button">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor>
+   </Button>
+   <Button layoutX="957.0" layoutY="599.0" mnemonicParsing="false" opacity="0.0" prefHeight="64.0" prefWidth="258.0" text="Button">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor>
+   </Button>
 </AnchorPane>
