--- a/src/main/resources/com/example/crime_management_system_gui/report.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/report.fxml
@@ -1,67 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.*?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<AnchorPane id="report" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Cases">
-    <Button layoutX="174.0" layoutY="748.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0"
-            prefHeight="94.0" prefWidth="338.0" text="Button">
+
+<AnchorPane id="report" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Cases">
+    <Button layoutX="179.0" layoutY="745.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="73.0" prefWidth="304.0" text="Button">
         <cursor>
-            <Cursor fx:constant="HAND"/>
+            <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <Button layoutX="1036.0" layoutY="756.0" mnemonicParsing="false" onAction="#handleSubmit" opacity="0.0"
-            prefHeight="101.0" prefWidth="358.0" text="Button">
+    <Button layoutX="1081.0" layoutY="745.0" mnemonicParsing="false" onAction="#handleSubmit" opacity="0.0" prefHeight="74.0" prefWidth="311.0" text="Button">
         <cursor>
-            <Cursor fx:constant="HAND"/>
+            <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <TextField fx:id="username" alignment="CENTER" focusTraversable="false" layoutX="595.0" layoutY="175.0"
-               prefHeight="62.0" prefWidth="358.0" promptText="Name">
+    <TextField fx:id="username" alignment="CENTER" focusTraversable="false" layoutX="602.0" layoutY="230.0" prefHeight="54.0" prefWidth="322.0" promptText="Name">
         <font>
-            <Font size="24.0"/>
+            <Font size="24.0" />
         </font>
         <cursor>
-            <Cursor fx:constant="TEXT"/>
+            <Cursor fx:constant="TEXT" />
         </cursor>
     </TextField>
-    <TextField fx:id="witness" alignment="CENTER" focusTraversable="false" layoutX="595.0" layoutY="254.0"
-               prefHeight="62.0" prefWidth="358.0" promptText="Witness (optional)">
+    <TextField fx:id="witness" alignment="CENTER" focusTraversable="false" layoutX="602.0" layoutY="360.0" prefHeight="54.0" prefWidth="322.0" promptText="Witness (optional)">
         <font>
-            <Font size="24.0"/>
+            <Font size="24.0" />
         </font>
         <cursor>
-            <Cursor fx:constant="TEXT"/>
+            <Cursor fx:constant="TEXT" />
         </cursor>
     </TextField>
-    <DatePicker fx:id="datePicker" focusTraversable="false" layoutX="595.0" layoutY="336.0" prefHeight="62.0"
-                prefWidth="358.0" promptText="Date of reporting" showWeekNumbers="true">
-        <cursor>
-            <Cursor fx:constant="HAND"/>
-        </cursor>
-    </DatePicker>
-    <TextArea fx:id="description" focusTraversable="false" layoutX="339.0" layoutY="505.0" prefHeight="222.0"
-              prefWidth="908.0" promptText="Put your report here, please">
+    <TextArea fx:id="description" focusTraversable="false" layoutX="271.0" layoutY="587.0" prefHeight="117.0" prefWidth="1028.0" promptText="Put your report here, please">
         <font>
-            <Font size="24.0"/>
+            <Font size="24.0" />
         </font>
         <cursor>
-            <Cursor fx:constant="TEXT"/>
+            <Cursor fx:constant="TEXT" />
         </cursor>
     </TextArea>
-    <Label fx:id="message" alignment="CENTER" contentDisplay="CENTER" layoutX="607.0" layoutY="748.0" prefHeight="62.0"
-           prefWidth="338.0">
+    <Label fx:id="message" alignment="CENTER" contentDisplay="CENTER" layoutX="548.0" layoutY="751.0" prefHeight="62.0" prefWidth="474.0">
         <font>
-            <Font size="18.0"/>
+            <Font size="24.0" />
         </font>
     </Label>
-    <ComboBox fx:id="crimeType" focusTraversable="false" layoutX="595.0" layoutY="420.0" prefHeight="62.0"
-              prefWidth="358.0" promptText="Type of report" visibleRowCount="100">
+    <ComboBox fx:id="crimeType" focusTraversable="false" layoutX="602.0" layoutY="487.0" prefHeight="54.0" prefWidth="322.0" promptText="Type of report" visibleRowCount="100">
         <cursor>
-            <Cursor fx:constant="HAND"/>
+            <Cursor fx:constant="HAND" />
         </cursor>
     </ComboBox>
 </AnchorPane>
