--- a/src/main/resources/com/example/crime_management_system_gui/view_profile.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/view_profile.fxml
@@ -3,11 +3,12 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="viewProfile" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.OfficerProfile">
-    <Button layoutX="26.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchTOPoliceChief" opacity="0.0" prefHeight="44.0" prefWidth="49.0" text="Button">
+    <Button layoutX="26.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchTOPoliceOfficer" opacity="0.0" prefHeight="44.0" prefWidth="49.0" text="Button">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
@@ -42,4 +43,5 @@
             <Font size="24.0" />
         </font>
     </Label>
+   <ListView fx:id="cases" layoutX="590.0" layoutY="470.0" prefHeight="218.0" prefWidth="410.0" />
 </AnchorPane>
