--- a/src/main/resources/com/example/crime_management_system_gui/add_criminal.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/add_criminal.fxml
@@ -8,17 +8,17 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="addCriminal" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Criminals">
-    <Button layoutX="52.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchTOPoliceOfficer" opacity="0.0" prefHeight="42.0" prefWidth="46.0" text="Button">
+    <Button layoutX="52.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToPoliceOfficer" opacity="0.0" prefHeight="42.0" prefWidth="46.0" text="Button">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <Button layoutX="652.0" layoutY="576.0" mnemonicParsing="false" onAction="#addCriminal" opacity="0.0" prefHeight="62.0" prefWidth="220.0" text="Button">
+    <Button layoutX="679.0" layoutY="573.0" mnemonicParsing="false" onAction="#addCriminal" opacity="0.0" prefHeight="62.0" prefWidth="226.0" text="Button">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <TextField fx:id="name" alignment="CENTER" layoutX="570.0" layoutY="252.0" prefHeight="62.0" prefWidth="370.0" promptText="Name">
+    <TextField fx:id="name" alignment="CENTER" layoutX="604.0" layoutY="247.0" prefHeight="62.0" prefWidth="370.0">
         <font>
             <Font size="24.0" />
         </font>
@@ -26,7 +26,7 @@
             <Cursor fx:constant="TEXT" />
         </cursor>
     </TextField>
-    <TextField fx:id="currentLocation" alignment="CENTER" layoutX="575.0" layoutY="451.0" prefHeight="62.0" prefWidth="379.0" promptText="Current Location">
+    <TextField fx:id="currentLocation" alignment="CENTER" layoutX="604.0" layoutY="451.0" prefHeight="62.0" prefWidth="370.0">
         <font>
             <Font size="24.0" />
         </font>
@@ -34,7 +34,7 @@
             <Cursor fx:constant="TEXT" />
         </cursor>
     </TextField>
-    <TextField fx:id="id" alignment="CENTER" layoutX="572.0" layoutY="347.0" prefHeight="62.0" prefWidth="379.0" promptText="ID">
+    <TextField fx:id="id" alignment="CENTER" layoutX="604.0" layoutY="345.0" prefHeight="62.0" prefWidth="370.0">
         <font>
             <Font size="24.0" />
         </font>
@@ -42,7 +42,7 @@
             <Cursor fx:constant="TEXT" />
         </cursor>
     </TextField>
-    <Label fx:id="message" alignment="CENTER" layoutX="572.0" layoutY="638.0" prefHeight="62.0" prefWidth="370.0">
+    <Label fx:id="message" alignment="CENTER" layoutX="469.0" layoutY="644.0" prefHeight="62.0" prefWidth="575.0">
         <font>
             <Font size="24.0" />
         </font>
