--- a/src/main/resources/com/example/crime_management_system_gui/create_department.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/create_department.fxml
@@ -39,7 +39,7 @@
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <Button layoutX="45.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchTOPoliceChief" opacity="0.0" prefHeight="39.0" prefWidth="55.0" text="back">
+    <Button layoutX="45.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToPoliceChief" opacity="0.0" prefHeight="39.0" prefWidth="55.0" text="back">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
