--- a/src/main/resources/com/example/crime_management_system_gui/police_chief.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/police_chief.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane id="policeChief" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Switching">
-    <Button layoutX="334.0" layoutY="589.0" mnemonicParsing="false" onAction="#switchTOCreateDepartment" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="create department">
+    <Button layoutX="334.0" layoutY="589.0" mnemonicParsing="false" onAction="#switchToCreateDepartment" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="create department">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
@@ -15,17 +15,17 @@
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <Button layoutX="932.0" layoutY="352.0" mnemonicParsing="false" onAction="#switchTOViewOfficer" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="view profile">
+    <Button layoutX="932.0" layoutY="352.0" mnemonicParsing="false" onAction="#switchToViewOfficer" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="view profile">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <Button layoutX="334.0" layoutY="352.0" mnemonicParsing="false" onAction="#switchTOAssignOfficer" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="view profile">
+    <Button layoutX="334.0" layoutY="352.0" mnemonicParsing="false" onAction="#switchToAssignOfficer" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="view profile">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <Button layoutX="924.0" layoutY="589.0" mnemonicParsing="false" onAction="#switchTOViewDepartment" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="view profile">
+    <Button layoutX="924.0" layoutY="589.0" mnemonicParsing="false" onAction="#switchToViewDepartment" opacity="0.0" prefHeight="68.0" prefWidth="276.0" text="view profile">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
