--- a/src/main/resources/com/example/crime_management_system_gui/view_criminal.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/view_criminal.fxml
@@ -9,18 +9,18 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="viewCriminal" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Criminals">
-    <Button layoutX="46.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchTOPoliceOfficer" opacity="0.0" prefHeight="42.0" prefWidth="54.0" text="Button">
+    <Button layoutX="46.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToPoliceOfficer" opacity="0.0" prefHeight="42.0" prefWidth="54.0" text="Button">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <Button layoutX="641.0" layoutY="664.0" mnemonicParsing="false" onAction="#viewCriminal" opacity="0.0" prefHeight="60.0" prefWidth="230.0" text="Button">
+    <Button layoutX="671.0" layoutY="309.0" mnemonicParsing="false" onAction="#viewCriminal" opacity="0.0" prefHeight="54.0" prefWidth="207.0" text="Button">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <ListView layoutX="236.0" layoutY="526.0" prefHeight="130.0" prefWidth="1114.0" />
-    <TextField fx:id="id" alignment="CENTER" layoutX="563.0" layoutY="199.0" prefHeight="66.0" prefWidth="375.0" promptText="ID">
+    <ListView fx:id="assignedCases" layoutX="326.0" layoutY="532.0" prefHeight="196.0" prefWidth="370.0" />
+    <TextField fx:id="id" alignment="CENTER" layoutX="585.0" layoutY="220.0" prefHeight="53.0" prefWidth="369.0">
         <cursor>
             <Cursor fx:constant="TEXT" />
         </cursor>
@@ -28,22 +28,22 @@
             <Font size="24.0" />
         </font>
     </TextField>
-    <Label fx:id="viewName" alignment="CENTER" layoutX="563.0" layoutY="280.0" prefHeight="66.0" prefWidth="375.0">
+    <Label fx:id="viewName" alignment="CENTER" layoutX="1068.0" layoutY="432.0" prefHeight="54.0" prefWidth="370.0">
         <font>
             <Font size="24.0" />
         </font>
     </Label>
-    <Label fx:id="viewCurrentLocation" alignment="CENTER" layoutX="562.0" layoutY="443.0" prefHeight="66.0" prefWidth="375.0">
+    <Label fx:id="viewCurrentLocation" alignment="CENTER" layoutX="324.0" layoutY="432.0" prefHeight="54.0" prefWidth="375.0">
         <font>
             <Font size="24.0" />
         </font>
     </Label>
-    <Label fx:id="message" alignment="CENTER" layoutX="946.0" layoutY="420.0" prefHeight="66.0" prefWidth="375.0">
+    <Label fx:id="message" alignment="CENTER" layoutX="584.0" layoutY="363.0" prefHeight="54.0" prefWidth="370.0">
         <font>
             <Font size="24.0" />
         </font>
     </Label>
-   <Label fx:id="viewLevel" alignment="CENTER" layoutX="562.0" layoutY="363.0" prefHeight="66.0" prefWidth="375.0">
+   <Label fx:id="viewLevel" alignment="CENTER" layoutX="1068.0" layoutY="607.0" prefHeight="54.0" prefWidth="370.0">
       <font>
          <Font size="24.0" />
       </font>
