--- a/src/main/resources/com/example/crime_management_system_gui/update.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/update.fxml
@@ -1,8 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane id="update" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.PoliceOfficers">
-    <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToPoliceOfficer" text="Button" />
+    <Button layoutX="47.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToPoliceOfficer" opacity="0.0" prefHeight="36.0" prefWidth="50.0" text="Button">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></Button>
+   <Button layoutX="729.0" layoutY="692.0" mnemonicParsing="false" onAction="#update" opacity="0.0" prefHeight="50.0" prefWidth="210.0" text="Button">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor>
+   </Button>
+   <Label fx:id="viewStartDate" alignment="CENTER" layoutX="235.0" layoutY="305.0" prefHeight="62.0" prefWidth="372.0">
+      <font>
+         <Font size="24.0" />
+      </font>
+   </Label>
+   <Label fx:id="viewLastUpdate" alignment="CENTER" layoutX="1077.0" layoutY="303.0" prefHeight="62.0" prefWidth="372.0">
+      <font>
+         <Font size="24.0" />
+      </font>
+   </Label>
+   <DatePicker fx:id="lastUpdate" layoutX="1076.0" layoutY="584.0" prefHeight="62.0" prefWidth="372.0" />
+   <ComboBox fx:id="criminals" layoutX="243.0" layoutY="592.0" prefHeight="62.0" prefWidth="372.0" />
+   <ComboBox fx:id="cases" layoutX="633.0" layoutY="191.0" onAction="#getCaseInfoForUpdate" prefHeight="62.0" prefWidth="372.0" />
+   <ListView fx:id="assignedCriminals" layoutX="660.0" layoutY="386.0" prefHeight="191.0" prefWidth="372.0" />
+   <Label fx:id="message" alignment="BOTTOM_CENTER" layoutX="577.0" layoutY="629.0" prefHeight="62.0" prefWidth="537.0">
+      <font>
+         <Font size="24.0" />
+      </font>
+   </Label>
 </AnchorPane>
